# custom-cli

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.sandbox-user/AppData/Local/Microsoft/VSApplicationInsights/vstelf3e86b4023cc43f0be495508d51f588a/: 20260416132014_62f7fd1c73294a2ab32c024a507ce643.trn  20260416132014_e7c806db7feb418083ce50fc666e45c8.trn  20260416132015_56656ff32d094765823524cbfbf50f27.trn  20260416132015_94ff8af45f7c4664ba3f710386cece8a.trn  20260416132016_dd32ada87f41460db48217d1205c83a8.trn  20260416132017_2eb4896baab44df4a67155a99519760e.trn  20260416132017_5f25101e3584447c8ed4aa418265126d.trn  20260416132018_22eb3aa4909b439ba5f6fc0ab5b75605.trn  20260416132018_d127e497a2a34e6ba419444357b4ee17.trn  20260416132019_b8de4a99411e476f9ef4d3c6169287bd.trn  20260416132040_007128c6edf6441bb06c0cd5047187ec.trn  20260416132041_82165cb5a2bc43fc83a7eb9fba02e788.trn  20260416132115_73691b895c214cb484b31b50e4156ad2.trn  20260416132116_0e68293cf46742d9b2362d17bfa15028.trn  20260416132116_1e2a550d465c4d5583d741f6adeb3ea2.trn  20260416132118_fadf38e380174f33971bfece6de11068.trn  20260416132119_4fe4318f71f849fbb7793be0445a7919.trn  20260416132119_d563c08e423141159dd4461941e2c5e5.trn  20260416132122_49751f672b1345c5a34524b55afad6f7.trn  20260416132123_b08c6276bdcf4c8eaed3c72bcc9dc6f0.trn  20260416132123_e6a01ab6ddf044fd8c0fa4e6444eced0.trn  20260416132126_705c62abc73440dca08b7cde3bd5a474.trn  20260416132126_c4dccdc924384d99837699c557476490.trn  20260416132127_2cad2188a98d46bfb1e58530613ea378.trn  20260416132129_30fc95edba2a48a192f86ed624556612.trn  20260416132130_1b85c1bddb0a47f9bbfcdddd76f36905.trn  20260416132130_2c3153f374d04aec93b9fb359b06774e.trn  20260416132133_710276804f4f4aabb1981ccdb4eb3e8b.trn  20260416132133_fc99cd0d9e0243639de7eb4033671d97.trn  20260416132134_8d7f8ff900ce44d19e75d337ee58d544.trn  20260416132136_fcac35eae81c4420bac63dc85f8f6751.trn  20260416132137_04f5b62178274412b507970a2cf7f1b4.trn  20260416132137_6afce1c7424348fb993767037a310691.trn  20260416132139_687c5b40c71047668032dd4edab241d8.trn  20260416132140_2efce6b08d4d4d50a7233ba645949199.trn  20260416132141_4f901ff3976047c583a40d30ec77f6c5.trn  20260416132142_90a8a9f43b854002993e31b345d63c7c.trn  20260416132142_fd7c1e5fc92f4697845aab2cf8f07ea5.trn  20260416132143_13c82841f81149dd904e24306d8d9963.trn  20260416132144_a498f66013cc4293a8245b7f9e19922d.trn  (+20 more)
.sandbox-user/AppData/Local/Microsoft/Windows/PowerShell/: StartupProfileData-NonInteractive
build-local-nmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-local-vs2026/: CMakeCache.txt
build-local-vs2026-devshell/: CMakeCache.txt
cmake/: cli_smoke_test.cmake  project_config.hpp.in  repository_hygiene_test.cmake  validate_management_docs.cmake  validate_project_completion.cmake
config/: cli-starter.json
docs/: architecture.md  command-reference.md  decisions.md  handoff.md  maintenance.md  migration-from-legacy.md  onboarding.md  project-overview.md  roadmap.md  testing.md  troubleshooting.md
docs/management/: agent-policy.yaml  decisions.yaml  handoff.yaml  phases.yaml  plan.yaml  verification.yaml
docs/management/schema/: agent-policy.schema.json  decision.schema.json  handoff.schema.json  phase.schema.json  plan.schema.json  verification.schema.json
include/starter/app/: application.hpp
include/starter/commands/: registrars.hpp
include/starter/core/: completion.hpp  config.hpp  exit_code.hpp  project_info.hpp  shell_line_reader.hpp  tokenize.hpp
scripts/: github_ci_status.py
src/: main.cpp
src/app/: application.cpp
src/commands/: about_command.cpp  config_command.cpp  doctor_command.cpp  echo_command.cpp  hello_command.cpp  register_commands.cpp
src/core/: completion.cpp  config.cpp  project_info.cpp  shell_line_reader.cpp  tokenize.cpp
tests/: check_project_completion.py  config_tests.cpp  validate_management_docs.py
